<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home_fragment"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/destination_title_home"/>
        <item
                android:id="@+id/nav_send_fragment"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/destination_title_send"/>
        <item
                android:id="@+id/nav_receive_fragment"
                android:icon="@drawable/ic_qrcode_black_24dp"
                android:title="@string/destination_title_receive"/>
        <item
                android:id="@+id/nav_request_fragment"
                android:icon="@drawable/ic_receipt_black_24dp"
                android:title="@string/destination_title_request"/>
    </group>

    <!--<item android:title="Communicate" >-->
        <!--<menu>-->
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="Share"/>-->
            <!--<item-->
                    <!--android:id="@+id/nav_send"-->
                    <!--android:icon="@drawable/ic_menu_send"-->
                    <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
